Fix alignment issue on mobile screen sizes
Ship placement container incorrectly had a width of 240px, causing it
to be slightly more centered than the player's gameboard.

This has been increased to 260px to rectify the issue.

--- a/src/style.scss
+++ b/src/style.scss
@@ -296,7 +296,7 @@ main {
     display: flex;
     flex-direction: column;
     height: calc($board-size-small + 12px + (1.1rem * 1.15));
-    width: 240px;
+    width: 260px;
 
     &__title {
       font-size: 1.1rem;
